# iCopy-rust

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: buildAndRelease.yml  publish-to-auto-release.yml
scripts/: aarch.mjs  publish.mjs  updater.mjs
src/: app.vue  main.js  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src-tauri/src/commands/: clipboard.rs
src-tauri/src/db/: conn.rs  mod.rs  models.rs  schema.rs
src/api/: index.ts
src/assets/styles/: app.scss
src/components/bar/: index.vue
src/components/item/: index.vue  useItem.ts
src/components/list/: index.vue
src/modules/fetcher/: mod.vue
src/modules/setting/: index.vue
src/store/: useClipboard.ts
src/utils/: clipboard.ts  db.ts  ipc.ts  keyup.ts  setSize.ts
