[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "notification-all", "fs-read-file", "fs-write-file", "macos-private-api", "window-hide", "window-set-size", "global-shortcut-all", "system-tray", "dialog-all"] }
tauri-plugin-clipboard = "0.6.10"
[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
